
option java_package = "it.unipr.aotlab.dmat.core.generated" ;

enum Format {
    COMPRESSEDROWS = 1;
    COMPRESSEDCOLUMNS = 2;
    DENSE = 3;
}

enum ElementType {
    BOOL = 1;
    INT8 = 2;
    INT16 = 3;
    INT32 = 4;
    INT64 = 5;
    UINT8 = 6;
    UINT16 = 7;
    UINT32 = 8;
    UINT64 = 9;
    FLOAT32 = 10;
    FLOAT64 = 11;
}

enum SemiRing {
    DEFAULTSEMIRING = 1;
    INT32ORDINARY = 2;
    INT32TROPICAL = 3;
    BOOLEANORDINARY = 4;
}

enum MatricesOnTheWire {
    DEFAULTMATRICESONTHEWIRE = 1;
    BYTES = 2;
    INT32TRIPLETS = 3;
}

message Body {
    required string matrixId = 1;
    required string chunkId = 2;
    required int32 startRow = 3;
    required int32 endRow = 4;
    required int32 startCol = 5;
    required int32 endCol = 6;
    required Format format = 7 [ default = DENSE ];
    required ElementType elementType = 8 [ default = INT32 ];
    required SemiRing semiRing = 9 [ default = DEFAULTSEMIRING ];
    required MatricesOnTheWire matricesOnTheWire = 10 [ default = DEFAULTMATRICESONTHEWIRE ];
}

